.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0a2 - Unreleased
------------------

- moved "Manage portlets" fallback link out of main_template to 
  plone.manage_portlets_fallback viewlet
  http://dev.plone.org/plone/ticket/9808
  [spliter]

- Point the "Join" action the newly-renamed @@register view.
  [esteele]

- Remove ``calendarpopup.js`` from jsregistry.xml. It no longer exists.
  [hannosch]

- Depend on ``plone.app.upgrade`` so it gets installed by default. Keeping
  the upgrade package separate only made sense when it had massively more
  dependencies than Plone itself. That cleanup isn't part of Plone 4.0.
  [hannosch]

- Added back an ``utranslate`` function to the i18nl10n module that retains the
  old call signature.
  [hannosch]

4.0a1 - 2009-11-19
------------------

- Moved ``Image Handling`` control panel into the main Plone category. It's not
  an add-on anymore.
  [hannosch]

- Clarified the default labels shown on the site setup overview page.
  [hannosch]

- Adjust tests to new Archetypes behavior, which respects the default language
  of the portal_languages tool.
  [hannosch]

- Adjust the _createObjectByType functions in utils and FactoryTool to use the
  _constructInstance method of the FTI instead of duplicating pieces of its
  logic.
  [davisagli]

- By default hide the "Subfolders" tab on collections. They don't behave in a
  way understandable to users. Existing sites aren't changed.
  [hannosch]

- Converted ``plone_javascript_variables.js`` to a browser page. Dynamically
  generating JS using a page template was too cumbersome. This also avoids the
  special ``escape_for_js`` handling of the translate script.
  [hannosch]

- "Relevance" was not internationalized in search_form.pt. This closes
  http://dev.plone.org/plone/ticket/9747
  [vincentfretin]
